(chores) camel-azure-servicebus: use unmodifiable list when possible